
noinst_LIBRARIES = libgsm.a
libgsm_a_SOURCES = \
	add.c \
	code.c \
	decode.c \
	gsm.h \
	gsm_create.c \
	gsm_decode.c \
	gsm_destroy.c \
	gsm_encode.c \
	gsm_explode.c \
	gsm_implode.c \
	gsm_option.c \
	gsm_print.c \
	long_term.c \
	lpc.c \
	preprocess.c \
	private.h \
	proto.h \
	rpe.c \
	short_term.c \
	table.c \
	unproto.h

EXTRA_DIST = README COPYRIGHT
