
noinst_LIBRARIES = liblpc10.a
liblpc10_a_SOURCES = \
	f2clib.c \
	analys.c \
	bsynz.c \
	chanwr.c \
	dcbias.c \
	decode.c \
	deemp.c \
	difmag.c \
	dyptrk.c \
	encode.c \
	energy.c \
	ham84.c \
	hp100.c \
	invert.c \
	irc2pc.c \
	ivfilt.c \
	lpcdec.c \
	lpcenc.c \
	lpcini.c \
	lpfilt.c \
	median.c \
	mload.c \
	onset.c \
	pitsyn.c \
	placea.c \
	placev.c \
	preemp.c \
	prepro.c \
	random.c \
	rcchk.c \
	synths.c \
	tbdm.c \
	voicin.c \
	vparms.c
	
EXTRA_DIST = README
